[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moerl_zoo"
dynamic = ["version"]
description = "Utilities and patches for MoERL — an efficient Mixture of Experts RL fine-tuning framework"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "LGPL-3.0-or-later"
keywords = ["llm", "moe", "reinforcement-learning", "ai", "finetune",]
authors = [
    {email = "basicv8vc@gmail.com"},
    {name = "slowfastai team"},
]
maintainers = [
    {name = "Jia", email = "basicv8vc@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch",
    "triton ; platform_system == 'Linux'",
    "packaging>=24.1",
    "tyro",
    "transformers>=4.46.1,!=4.47.0",
    "datasets>=2.16.0",
    "sentencepiece>=0.2.0",
    "tqdm",
    "psutil",
    "wheel>=0.42.0",
    "numpy",
    "accelerate>=0.34.1",
    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,<=0.15.2",
    "peft>=0.7.1,!=0.11.0",
    "protobuf<4.0.0",
    "huggingface_hub",
    "hf_transfer",
    "cut_cross_entropy",
    "pillow",
    "regex",
]

[tool.setuptools.dynamic]
version = {attr = "moerl_zoo.__init__.__version__"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["images*"]

[project.urls]
homepage = "https://github.com/slowfastai/moerl"
repository = "https://github.com/slowfastai/moerl"
